TrainingStaging/force-app/main/default/objects/Attendee__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will check if the attendee is still count in Training for the Training Session</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>