TrainingStaging/force-app/main/default/objects/Attendee__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>This will capture the birth date of attendee</description>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>