TrainingStaging/force-app/main/default/objects/Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the Attendee</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>