TrainingStaging/force-app/main/default/objects/Attendee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone no. of the Attendee</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>