TrainingStaging/force-app/main/default/objects/Attendee__c/fields/Training_Session__c.field-meta.xml
<CustomField>
    <fullName>Training_Session__c</fullName>
    <description>Session record that attendee will attend</description>
    <label>Training Session</label>
    <referenceTo>Training_Session__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>