TrainingStaging/force-app/main/default/objects/Attendee__c/validationRules/VR_Attendee_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Attendee_Contact</fullName>
    <active>true</active>
    <description>At least one field (Email or Phone) must be filled.</description>
    <errorConditionFormula>AND( ISBLANK(Email__c), ISBLANK(Phone__c) )</errorConditionFormula>
    <errorMessage>Enter Email or Phone.</errorMessage>
</ValidationRule>